--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,21 @@
 
+
+
+
 .jumbotron{
-	padding-bottom: -10px
+
+	height: 720px;
+	margin-bottom: 550px;
 }
+
 .navbar{
 	background-color: #000000;
 	font-family: 'Lobster', cursive;
-	padding-bottom: 10px;
+	padding-bottom: 10px;	
+	margin-bottom: -50px;
+	width: 100%;
 }
+
 
 #logo{
 	font-family: 'Lobster', cursive;
@@ -19,17 +28,39 @@
 	margin-right: 20px;
 }
 
-
-{
-	height: 30px;
+.carousel{
+	height: 720px;
+	background-color: #3d4345;
+}
+.carousel-inner{
+	height: 720px;
 	width: 100%;
 }
+
+/*.carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img {
+    border: 250px,;
+    position: relative;
+    left: 500px;
+    margin-top: 200px;
+}*/
 
 h1#abouttitle{
 text-align: center;
 
 }
 
+
+#aboutUsmodal{
+	background-color: #fff;
+	display: block;
+    position: absolute;
+    left: 60%;
+    height: 88%;
+    width: 28%;
+    overflow-y:auto;
+    overflow-x:auto;
+    border-radius: 0px
+}
 h3#modalcontent{
 	text-align:center;
 	font-family: 'Cabin Condensed', sans-serif;
@@ -39,6 +70,7 @@ p#modalpara{
 	text-align:center;
 	font-family: 'Archivo Narrow', sans-serif;
 	font-size: 22px;
+	margin: 15px;
 }
 
 .btn-primary{
@@ -49,5 +81,44 @@ p#modalpara{
 	background-color: #000;
 	font-size: 18px;
 	border: none;
+
+}
+
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary.active
+{
+  background-color: #000;
+  border: none;
+}
+
+.btn-primary:hover
+{
+  background-color: gray;
+  border: none;
+}
+
+.btn-primary:visited{
+	border: none;
+}
+
+.carousel-control right{
+
+	height: 100px;
+
+}
+
+.carousel-control left{
+	float: left;
+}
+
+#rightArrow{
+	font-size: 75px;
+	margin-top: 360px;
+}
+
+#leftArrow{
+	font-size: 75px;
+	margin-top: 360px;
 }
 
