--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 
 .jumbotron{
 
-	height: 300px;
+	height: 400px;
 	margin-bottom: 100px;
 }
 
@@ -17,7 +17,7 @@
 	width: 100%;
 }
 
-#trend-errors p {
+#trend-mes p {
 	color: #fff;
 	letter-spacing: 1px;
 }
@@ -40,6 +40,10 @@
 .carousel-inner{
 	height: 300px;
 	width: 100%;
+}
+
+.carousel-indicators {
+	bottom: -50px;
 }
 
 .car-image {
@@ -150,9 +154,24 @@ p#modalpara{
 	.carousel-control {
 		width:10%;
 	}
+	.carousel-indicators {
+		bottom: -50px;
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.carousel-control {
+		width:10%;
+	}
+	.carousel-indicators {
+		bottom: -50px;
+	}
 }
 @media screen and (max-width: 500px) {
 	.carousel-control {
 		width:15%;
+	}
+	.carousel-indicators {
+		bottom: -50px;
 	}
 }
