--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,8 @@
 }
 
 .jumbotron{
-
-	height: 400px;
+	
+	height: 375px;
 	margin-bottom: 100px;
 }
 
@@ -38,16 +38,22 @@
 }
 
 .carousel-inner{
-	height: 300px;
+	background-color: #303030;
+	color: #ffffff;
+	height: 375px;
 	width: 100%;
+	padding-top: 0px;
 }
 
 .carousel-indicators {
-	bottom: -50px;
+	bottom: 0px;
 }
 
 .car-image {
-	max-height: 250px;
+	height: 250px;
+	margin-top: 20px;
+	border-radius: 10px;
+	max-width: 400px;
 }
 
 .car-image:hover {
@@ -129,8 +135,8 @@ p#modalpara{
 }
 
 #rightArrow, #leftArrow{
-	font-size: 75px;
-	margin-top: 110px;
+	font-size: 50px;
+	margin-top: 140px;
 }
 
 /* responsive yt embed from http://embedresponsively.com/ */
@@ -149,13 +155,74 @@ p#modalpara{
 	height: 100%; 
 }
 
+.main-footer {
+	position: relative;
+	margin-top: -150px; /* negative value of footer height */
+	height: 150px;
+	clear:both;
+	padding-top:20px;
+}
+
+.main-footer h6{
+	margin-top: 45px;
+}
+
+body{
+	padding-bottom: 100px;
+}
+/* Extra Rules for Mobile */
+@media screen and (max-width: 1200px) {
+	.carousel-control {
+		width:10%;
+	}
+	.carousel-inner{
+		background-color: #303030;
+		color: #ffffff;
+		height: 350px;
+		width: 100%;
+	}
+
+	.jumbotron{
+		height: 375px;
+		margin-bottom: 100px;
+	}
+
+	.carousel-indicators {
+		bottom: 0px;
+	}
+
+	.car-image {
+		height: 200px;
+		border-radius: 10px;
+		max-width: 300px;
+	}
+}
+
 /* Extra Rules for Mobile */
 @media screen and (max-width: 959px) {
 	.carousel-control {
 		width:10%;
 	}
 	.carousel-indicators {
-		bottom: -50px;
+		bottom: 0px;
+	}
+	.carousel-inner{
+		background-color: #303030;
+		padding-top: 0px;
+		color: #ffffff;
+		height: 350px;
+		width: 100%;
+	}
+
+	.jumbotron{
+		height: 350px;
+		margin-bottom: 100px;
+	}
+
+	.car-image {
+		height: 180px;
+		border-radius: 10px;
+		max-width: 250px;
 	}
 }
 
@@ -164,7 +231,27 @@ p#modalpara{
 		width:10%;
 	}
 	.carousel-indicators {
-		bottom: -50px;
+		bottom: 0px;
+	}
+	.carousel-inner{
+		background-color: #303030;
+		padding-top: 0px;
+		color: #ffffff;
+		height: 250px;
+		width: 100%;
+	}
+	.jumbotron{
+		height: 250px;
+		margin-bottom: 100px;
+	}
+
+	.car-image {
+		height: 100px;
+		border-radius: 10px;
+		max-width: 155px;
+	}
+	h3 {
+		font-size: 20px;
 	}
 }
 @media screen and (max-width: 500px) {
@@ -172,6 +259,26 @@ p#modalpara{
 		width:15%;
 	}
 	.carousel-indicators {
-		bottom: -50px;
+		bottom: 0px;
+	}
+	.car-image {
+		height: 75px;
+		border-radius: 10px;
+		max-width: 130px;
+	}
+
+	.jumbotron{
+		height: 250px;
+		margin-bottom: 100px;
+	}
+	.carousel-inner{
+		background-color: #303030;
+		padding-top: 0px;
+		color: #ffffff;
+		height: 250px;
+		width: 100%;
+	}
+	h3 {
+		font-size: 18px;
 	}
 }
